description to tiles && finish interactive Layer

--- a/src/editor/fxml/editor_main.fxml
+++ b/src/editor/fxml/editor_main.fxml
@@ -126,9 +126,9 @@
                <children>
                   <Canvas fx:id="backgroundLayer" height="704.0" width="1280.0" />
                   <Canvas fx:id="ground0Layer" height="704.0" width="1280.0" />
-                  <Canvas fx:id="ground1Layer1" height="704.0" width="1280.0" />
+                  <Canvas fx:id="ground1Layer" height="704.0" width="1280.0" />
                   <Canvas fx:id="actorLayer" height="704.0" width="1280.0" />
-                  <Canvas fx:id="object0Layer1" height="704.0" width="1280.0" />
+                  <Canvas fx:id="object0Layer" height="704.0" width="1280.0" />
                   <Canvas fx:id="object1Layer" height="704.0" width="1280.0" />
                   <Canvas fx:id="collisionLayer" height="704.0" width="1280.0" />
                   <Pane fx:id="lightLayer" blendMode="MULTIPLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: midnightblue;" />
