--- a/src/editor/fxml/editor_main.fxml
+++ b/src/editor/fxml/editor_main.fxml
@@ -92,7 +92,7 @@
       </MenuBar>
       <HBox alignment="CENTER" maxHeight="704.0" VBox.vgrow="ALWAYS">
          <children>
-            <VBox alignment="TOP_CENTER" minWidth="250.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+            <VBox fx:id="sidebar" alignment="TOP_CENTER" minWidth="250.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                <children>
                   <HBox alignment="CENTER" fillHeight="false" spacing="20.0">
                      <children>
@@ -122,7 +122,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></VBox>
             <Separator orientation="VERTICAL" prefHeight="704.0" prefWidth="0.0" />
-            <StackPane maxHeight="704.0" maxWidth="1280.0">
+            <StackPane fx:id="stack" maxHeight="704.0" maxWidth="1280.0">
                <children>
                   <Canvas fx:id="backgroundLayer" height="704.0" width="1280.0" />
                   <Canvas fx:id="ground0Layer" height="704.0" width="1280.0" />
@@ -131,9 +131,9 @@
                   <Canvas fx:id="object0Layer" height="704.0" width="1280.0" />
                   <Canvas fx:id="object1Layer" height="704.0" width="1280.0" />
                   <Canvas fx:id="collisionLayer" height="704.0" width="1280.0" />
-                  <Pane fx:id="lightLayer" blendMode="MULTIPLY" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: midnightblue;" />
-                  <Pane fx:id="interactiveLayer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+                  <Pane fx:id="lightLayer" blendMode="MULTIPLY" maxHeight="704.0" maxWidth="1280.0" style="-fx-background-color: midnightblue;" />
                   <Canvas fx:id="gridLayer" height="704.0" width="1280.0" />
+                  <Pane fx:id="interactiveLayer" maxHeight="704.0" maxWidth="1280.0" />
                </children>
             </StackPane>
          </children>
