--- a/src/editor/fxml/editor_eventlist.fxml
+++ b/src/editor/fxml/editor_eventlist.fxml
@@ -6,15 +6,14 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="editor.fxml.Controller_EventList">
    <children>
-      <ListView prefHeight="200.0" prefWidth="475.0" VBox.vgrow="ALWAYS" />
+      <ListView fx:id="list" fixedCellSize="60.0" prefHeight="200.0" prefWidth="475.0" VBox.vgrow="ALWAYS" />
       <HBox alignment="CENTER_RIGHT" spacing="10.0">
          <children>
-            <Button cancelButton="true" mnemonicParsing="false" text="Close" />
-            <Button mnemonicParsing="false" text="Remove" />
-            <Button defaultButton="true" mnemonicParsing="false" text="Create Event" />
+            <Button fx:id="closeB" cancelButton="true" mnemonicParsing="false" text="Close" />
+            <Button fx:id="removeB" mnemonicParsing="false" text="Remove" />
+            <Button fx:id="createB" defaultButton="true" mnemonicParsing="false" text="Create Event" />
          </children>
       </HBox>
    </children>
