--- a/src/editor/fxml/eventCell.fxml
+++ b/src/editor/fxml/eventCell.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="450.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="editor.fxml.EventCellController">
+<HBox fx:id="root" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="450.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
@@ -19,44 +20,61 @@
          <HBox.margin>
             <Insets right="10.0" />
          </HBox.margin></Rectangle>
-      <VBox>
+      <GridPane hgap="5.0" prefHeight="50.0" prefWidth="283.0" HBox.hgrow="ALWAYS">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="80.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="5.0" prefWidth="5.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="120.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="5.0" prefWidth="5.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="30.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label fx:id="triggerXtext" text="Trigger X: 39">
+            <Label prefHeight="21.0" prefWidth="76.0" text="TriggerX">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font size="13.0" />
                </font>
             </Label>
-            <Label fx:id="triggerYtext" text="Trigger Y: 21">
+            <Label text="TriggerX" GridPane.rowIndex="1">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="triggerXtext" text="00" GridPane.columnIndex="1">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="triggerYtext" text="00" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label prefHeight="21.0" prefWidth="95.0" text="Present Flags: " GridPane.columnIndex="2">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label prefHeight="21.0" prefWidth="103.0" text="Absent Flags: " GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="flagsPresentText" prefHeight="19.0" prefWidth="20.0" text="00" GridPane.columnIndex="3">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="flagsAbsentText" text="00" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <font>
+                  <Font size="13.0" />
                </font>
             </Label>
          </children>
-      </VBox>
-      <Line endY="-30.0" smooth="false" stroke="#ababab" strokeLineCap="ROUND" strokeWidth="2.0">
-         <HBox.margin>
-            <Insets left="10.0" right="10.0" />
-         </HBox.margin>
-      </Line>
-      <VBox>
-         <children>
-            <Label fx:id="flagsPresentText" text="Flags Present: 00">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="flagsAbsentText" text="Flags Absent: 00">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-         </children>
-      </VBox>
-      <SVGPath fx:id="triggerSourceSVG" content="M17,0C7.6,0,0,7.6,0,17s7.6,17,17,17c9.4,0,17-7.6,17-17S26.4,0,17,0z M17.1,8.8c2.1-1.9,5.4-1.7,7.3,0.4l0.3,0.4l-1.1,1c-0.6-0.6-1.6-0.6-2.2-0.1l-0.9,0.8c-0.6,0.6-0.7,1.6-0.2,2.2l-1.3,1.1l-3.8-4.3L17.1,8.8z M23.4,12.4l-1,0.9c-0.4,0.3-0.9,0.3-1.2-0.1c-0.3-0.4-0.3-0.9,0.1-1.2l1-0.9c0.4-0.3,0.9-0.3,1.2,0.1h0C23.8,11.6,23.8,12.1,23.4,12.4z M16.9,25.2c-2.1,1.9-5.4,1.7-7.3-0.4l-1.1-1.2c-1.9-2.1-1.7-5.4,0.4-7.3l5.9-5.3l8.1,8.9L16.9,25.2z M25.1,17.8l-1.8,1.6l-3.8-4.2l1.3-1.1c0.6,0.6,1.6,0.6,2.2,0l0.9-0.8c0.6-0.6,0.7-1.5,0.2-2.2l1.1-1l0.3,0.4C27.5,12.6,27.3,15.9,25.1,17.8z" fill="#3c2974">
-         <HBox.margin>
-            <Insets left="30.0" />
-         </HBox.margin>
-      </SVGPath>
+      </GridPane>
       <Label fx:id="noEventPointsText" alignment="CENTER" contentDisplay="CENTER" text="96" textFill="#3c2974">
          <graphic>
             <Circle fill="#ffffff00" radius="16.0" stroke="#3c2974" strokeWidth="3.0" />
@@ -65,6 +83,9 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <SVGPath fx:id="triggerSourceSVG1" content="M17.5,0.5c-9.4,0-17,7.6-17,17s7.6,17,17,17s17-7.6,17-17S26.9,0.5,17.5,0.5z M27.8,21.2c0,0.6-0.5,1.1-1.1,1.1H20v2.2h2.7c0.5,0,0.8,0.4,0.8,0.8v0.9c0,0.5-0.4,0.8-0.8,0.8H12.3c-0.5,0-0.8-0.4-0.8-0.8v-0.9c0-0.5,0.4-0.8,0.8-0.8h2.7v-2.2H8.3c-0.6,0-1.1-0.5-1.1-1.1v-11c0-0.9,0.7-1.7,1.7-1.7h17.8c0.6,0,1.1,0.5,1.1,1.1V21.2zM17.5,0.5c-9.4,0-17,7.6-17,17s7.6,17,17,17s17-7.6,17-17S26.9,0.5,17.5,0.5z M27.8,21.2c0,0.6-0.5,1.1-1.1,1.1H20v2.2h2.7c0.5,0,0.8,0.4,0.8,0.8v0.9c0,0.5-0.4,0.8-0.8,0.8H12.3c-0.5,0-0.8-0.4-0.8-0.8v-0.9c0-0.5,0.4-0.8,0.8-0.8h2.7v-2.2H8.3c-0.6,0-1.1-0.5-1.1-1.1v-11c0-0.9,0.7-1.7,1.7-1.7h17.8c0.6,0,1.1,0.5,1.1,1.1V21.2z" fill="#3c2974" />
+      <SVGPath fx:id="triggerSource" content="M17.5,0.5c-9.4,0-17,7.6-17,17s7.6,17,17,17s17-7.6,17-17S26.9,0.5,17.5,0.5z M27.8,21.2c0,0.6-0.5,1.1-1.1,1.1H20v2.2h2.7c0.5,0,0.8,0.4,0.8,0.8v0.9c0,0.5-0.4,0.8-0.8,0.8H12.3c-0.5,0-0.8-0.4-0.8-0.8v-0.9c0-0.5,0.4-0.8,0.8-0.8h2.7v-2.2H8.3c-0.6,0-1.1-0.5-1.1-1.1v-11c0-0.9,0.7-1.7,1.7-1.7h17.8c0.6,0,1.1,0.5,1.1,1.1V21.2zM17.5,0.5c-9.4,0-17,7.6-17,17s7.6,17,17,17s17-7.6,17-17S26.9,0.5,17.5,0.5z M27.8,21.2c0,0.6-0.5,1.1-1.1,1.1H20v2.2h2.7c0.5,0,0.8,0.4,0.8,0.8v0.9c0,0.5-0.4,0.8-0.8,0.8H12.3c-0.5,0-0.8-0.4-0.8-0.8v-0.9c0-0.5,0.4-0.8,0.8-0.8h2.7v-2.2H8.3c-0.6,0-1.1-0.5-1.1-1.1v-11c0-0.9,0.7-1.7,1.7-1.7h17.8c0.6,0,1.1,0.5,1.1,1.1V21.2z" fill="#3c2974">
+         <HBox.margin>
+            <Insets right="10.0" />
+         </HBox.margin></SVGPath>
    </children>
 </HBox>
