--- a/src/commons/eventScript/editor_create_flagRemove.fxml
+++ b/src/commons/eventScript/editor_create_flagRemove.fxml
@@ -3,19 +3,17 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="440.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="commons.eventScript.Controller_AddAlert">
+<VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="440.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="commons.eventScript.Controller_RemoveFlag">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <children>
       <VBox spacing="10.0">
          <children>
-            <ComboBox fx:id="type" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
-            <TextField fx:id="text" promptText="Alert Text" />
+            <ComboBox fx:id="flagSelection" maxWidth="1.7976931348623157E308" prefWidth="150.0" />
          </children>
       </VBox>
       <HBox fx:id="buttonsRow" alignment="BASELINE_LEFT" spacing="20.0">
