validity check for GameEvent Window

--- a/src/editor/fxml/editor_createEvent.fxml
+++ b/src/editor/fxml/editor_createEvent.fxml
@@ -65,7 +65,7 @@
       <HBox spacing="20.0">
          <children>
             <Button fx:id="cancelB" cancelButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Cancel" HBox.hgrow="ALWAYS" />
-            <Button fx:id="addB" defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add" HBox.hgrow="ALWAYS" />
+            <Button fx:id="addB" defaultButton="true" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
    </children>
