--- a/src/game/gameGUI.fxml
+++ b/src/game/gameGUI.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox alignment="CENTER" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="root" alignment="CENTER" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.GameGUIController">
    <children>
       <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="704.0" prefWidth="1280.0" style="-fx-background-color: white;" VBox.vgrow="NEVER">
          <children>
@@ -51,30 +52,38 @@
                         <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
                      </effect>
                   </Label>
-                  <Label fx:id="mapName" alignment="CENTER" layoutY="152.0" opacity="0.0" prefWidth="1280.0" text="mapTitle" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="Trebuchet MS Bold" size="30.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
-                     </effect>
-                  </Label>
-                  <Label fx:id="mapSubName" alignment="CENTER" layoutY="194.0" opacity="0.0" prefWidth="1280.0" text="mapSubTitle" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="Trebuchet MS Bold Italic" size="18.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
-                     </effect>
-                  </Label>
-                  <VBox fx:id="consoleWrapper" layoutX="30.0" layoutY="30.0" prefHeight="235.0" prefWidth="389.0" spacing="5.0" visible="false">
+                  <VBox fx:id="mapNameWrapper" layoutX="-1.0" layoutY="151.0" opacity="0.0" spacing="15.0">
                      <children>
-                        <TextFlow fx:id="consoleOut" prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: monospace; -fx-background-color: #00000066; -fx-text-fill: #fff;" VBox.vgrow="ALWAYS">
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </TextFlow>
-                        <TextField fx:id="consoleIn" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #00000066; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
+                        <Label fx:id="mapName" alignment="CENTER" prefWidth="1280.0" text="mapTitle" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font name="Trebuchet MS Bold" size="30.0" />
+                           </font>
+                           <effect>
+                              <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
+                           </effect>
+                        </Label>
+                        <Label fx:id="mapSubName" alignment="CENTER" prefWidth="1280.0" text="mapSubTitle" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font name="Trebuchet MS Bold Italic" size="18.0" />
+                           </font>
+                           <effect>
+                              <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
+                           </effect>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox fx:id="consoleWrapper" layoutX="30.0" layoutY="30.0" prefHeight="235.0" prefWidth="389.0" spacing="5.0" stylesheets="@consoleStyle.css" visible="false">
+                     <children>
+                        <ScrollPane fx:id="consoleScroll" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+                           <content>
+                              <TextFlow fx:id="consoleOut" prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: monospace; -fx-background-color: #00000066; -fx-text-fill: #fff; -fx-font-size: 12; -fx-font-weight: bold;">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </TextFlow>
+                           </content>
+                        </ScrollPane>
+                        <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #00000066; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
                      </children>
                   </VBox>
                </children>
