--- a/src/game/gui/gameGUI.fxml
+++ b/src/game/gui/gameGUI.fxml
@@ -21,7 +21,7 @@
             <Canvas fx:id="backLayer" cache="true" height="704.0" width="1280.0" />
             <Canvas fx:id="actorLayer" cache="true" height="704.0" width="1280.0" />
             <Canvas fx:id="frontLayer" cache="true" height="704.0" width="1280.0" />
-            <Pane fx:id="lightLayer" blendMode="MULTIPLY" opacity="0.9" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #001b38;" />
+            <Pane fx:id="lightLayer" blendMode="MULTIPLY" opacity="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #001b38;" />
             <ImageView fx:id="vignette" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../resources/vignette2.png" />
@@ -44,7 +44,7 @@
                         </ImageView>
                      </graphic>
                   </Label>
-                  <Label fx:id="dialogText" alignment="CENTER" layoutY="553.0" opacity="0.0" prefHeight="21.0" prefWidth="1280.0" text="gsfefsefseaff" textAlignment="CENTER" textFill="WHITE">
+                  <Label fx:id="dialogText" alignment="CENTER" layoutY="553.0" prefHeight="21.0" prefWidth="1280.0" text="gsfefsefseaff" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS Bold" size="18.0" />
                      </font>
@@ -72,9 +72,9 @@
                         </Label>
                      </children>
                   </VBox>
-                  <VBox fx:id="consoleWrapper" layoutX="30.0" layoutY="30.0" prefHeight="235.0" prefWidth="389.0" spacing="5.0" stylesheets="@consoleStyle.css" visible="false">
+                  <VBox fx:id="consoleWrapper" layoutX="30.0" layoutY="30.0" prefHeight="235.0" prefWidth="389.0" spacing="5.0" stylesheets="@consoleStyle.css">
                      <children>
-                        <ScrollPane fx:id="consoleScroll" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+                        <ScrollPane fx:id="consoleScroll" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" VBox.vgrow="ALWAYS">
                            <content>
                               <TextFlow fx:id="consoleOut" prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: monospace; -fx-background-color: #00000066; -fx-text-fill: #fff; -fx-font-size: 12; -fx-font-weight: bold;">
                                  <padding>
@@ -86,6 +86,14 @@
                         <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #00000066; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
                      </children>
                   </VBox>
+                  <Label fx:id="timeText" alignment="CENTER" layoutX="1159.0" layoutY="47.0" prefHeight="21.0" prefWidth="86.0" text="00:00" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="Trebuchet MS Bold" size="18.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" height="20.0" offsetY="1.0" radius="7.0" spread="1.0" width="10.0" />
+                     </effect>
+                  </Label>
                </children>
             </Pane>
          </children>
