--- a/src/game/gui/gameGUI.fxml
+++ b/src/game/gui/gameGUI.fxml
@@ -44,7 +44,7 @@
                         </ImageView>
                      </graphic>
                   </Label>
-                  <Label fx:id="dialogText" alignment="CENTER" layoutY="553.0" prefHeight="21.0" prefWidth="1280.0" text="gsfefsefseaff" textAlignment="CENTER" textFill="WHITE">
+                  <Label fx:id="dialogText" alignment="CENTER" layoutY="553.0" opacity="0.0" prefHeight="21.0" prefWidth="1280.0" text="gsfefsefseaff" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS Bold" size="18.0" />
                      </font>
@@ -76,14 +76,14 @@
                      <children>
                         <ScrollPane fx:id="consoleScroll" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" VBox.vgrow="ALWAYS">
                            <content>
-                              <TextFlow fx:id="consoleOut" prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: monospace; -fx-background-color: #00000066; -fx-text-fill: #fff; -fx-font-size: 12; -fx-font-weight: bold;">
+                              <TextFlow fx:id="consoleOut" prefHeight="200.0" prefWidth="200.0" style="-fx-font-family: monospace; -fx-background-color: #000000CC; -fx-text-fill: #fff; -fx-font-size: 12; -fx-font-weight: bold;">
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
                               </TextFlow>
                            </content>
                         </ScrollPane>
-                        <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #00000066; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
+                        <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #000000CC; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
                      </children>
                   </VBox>
                   <Label fx:id="timeText" alignment="CENTER" layoutX="1159.0" layoutY="47.0" prefHeight="21.0" prefWidth="86.0" text="00:00" textAlignment="CENTER" textFill="WHITE">
