--- a/src/game/gui/consoleStyle.css
+++ b/src/game/gui/consoleStyle.css
@@ -15,6 +15,10 @@
     -fx-scale-y: 0;
 }
 
+#consoleScroll {
+    -fx-background-color: #000000CC;
+}
+
 .scroll-pane:fitToWidth .scroll-bar:vertical {
     -fx-background-color: #000000CC;
     -fx-border-radius: 3px;
