--- a/src/game/gui/gameGUI.fxml
+++ b/src/game/gui/gameGUI.fxml
@@ -83,7 +83,7 @@
                               </TextFlow>
                            </content>
                         </ScrollPane>
-                        <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #000000CC; -fx-text-fill: #ffffff; -fx-font-family: monospace;" />
+                        <TextField fx:id="consoleIn" onAction="#acceptCommand" prefHeight="14.0" prefWidth="331.0" promptText="&lt;console&gt;" style="-fx-background-color: #000000CC; -fx-text-fill: #ffffff; -fx-font-family: monospace; -fx-font-size: 14;" />
                      </children>
                   </VBox>
                   <Label fx:id="timeText" alignment="CENTER" layoutX="1159.0" layoutY="47.0" prefHeight="21.0" prefWidth="86.0" text="00:00" textAlignment="CENTER" textFill="WHITE">
